--- a/html-css-practice/src/sections/hero.html
+++ b/html-css-practice/src/sections/hero.html
@@ -9,7 +9,7 @@
         through a range of services including SEO, PPC, social media marketing,
         and content creation.
       </p>
-      <button class="cta hero-cta text-medium" title="book consultation">Book a consultation</button>
+      <button class="cta button-cta" title="book consultation">Book a consultation</button>
     </div>
     <div class="hero-content-rightside">
       <figure>
